# JobRadar

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  scraper_config.toml
api/: Cargo.toml
api/src/: main.rs
bdd/migrationsScript/: v001_create_job_offers_table.sql
bdd/script/: v001_create_tables.sql
db/: Cargo.toml
db/docker/initdb/: 01-create-users.sh  INIT_USERS.md
db/docker/initdb/sql/: 01-app-user.sql  02-migrator-user.sql
db/migrations/: 000-01_create_db.sql  000-01_create_job_offers_table.sql  000-02_create_table_history.sql  000-03_create_table_history.sql  000-03_seed_migrations_history.sql
db/src/: connection.rs  lib.rs
db/src/migration_cli/: find_migrations.rs  migration_cli.rs  mod.rs  record_migration.rs  run_migration_files.rs
db/src/models/: job_offer.rs  migration_history.rs  mod.rs  table_serialization.rs
db/src/orm/: fetch.rs  mod.rs  query_configs_builder.rs  sql_query_builder.rs
db/src/orm/security/: mod.rs  secure_request.rs  verify_syntax.rs
scraper/: Cargo.toml
scraper/models/db_models_copy/: WHY_COPY_THEM.md  job_offer_example.jsonc  job_offer_structure.jsonc
scraper/restrictions/: README.md  apec-robots.txt  france_travail-robots.txt  hellowork-robots.txt  indeed-robots.txt  job_teaser-robots.txt  linkedin-robots.txt
scraper/src/: main.rs
scraper/src/config/: get_configs_files.rs  mod.rs  workspace.rs
scraper/src/http/: init_http_client.rs  mod.rs
scraper/src/http_client/: init_http_client.rs
scraper/src/parser/: parser.rs
shared/: Cargo.toml
shared/src/: lib.rs  toml_interactions.rs
(+12 files in other folders)
