[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
shared = { path = "../shared" }
reqwest = { version = "0.13.4" }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4"
